Gotowy szablon bloga z formularzem dodawania wpisów i możliwością ich edycji dla zalogowanych użytkowników

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,8 +5,7 @@
 {% block content %}
 
     <div>
-        <h2><a href="">My first post</a></h2>
-        <p>published: date, hour</p>
+        <h2><a href="">Od autora</a></h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, aspernatur assumenda blanditiis dolores ex maxime officiis. Ad delectus dicta dolorum et incidunt ipsam, perferendis saepe. Mollitia necessitatibus omnis quibusdam repudiandae?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur et impedit, ipsum maxime natus omnis praesentium quae quasi quia rerum.</p>
         <p>Lorem ipsum dolor sit amet.</p>
