--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -24,7 +24,12 @@ h1 a, h2 a {
     margin-left: 40px;
 }
 
-h1, h2, h3, h4 {
+h1, h2 {
+    font-family: 'Lobster', cursive;
+    color: #C25100;
+}
+
+h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
