--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,28 +1,50 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="pl">
+
 <head>
+    <title>clw.pythonanywhere.com</title>
     <meta charset="UTF-8">
-    <title>Blog</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
-<body>
 
-    <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        {% endif %}
-        <h1><a href="/">Blog o wszystkim</a></h1>
+<body>
+    <div class="container-fluid page-header">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg">
+                <h1 class="navbar-text">clw.pythonanywhere.com</h1>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainmenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-end" id="mainmenu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'post_list' %}">Blog DG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'bs_grid' %}">Bootstrap grid</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
 
-    <div class="content container">
+    <div class="container">
         <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
+            <div class="col-12">
+                <p></p>
+                {% block content %}
+                {% endblock %}
             </div>
         </div>
     </div>
