--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="pl">
 
 <head>
@@ -33,6 +33,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'bs_grid' %}">Bootstrap grid</a>
                         </li>
+                        <li class="nav-item">
+                            {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                            {% else %}
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -43,6 +50,16 @@
         <div class="row">
             <div class="col-12">
                 <p></p>
+                <div style="text-align: right;">
+                <button style="background-color: gray;" onclick="myFunction()">Light/Dark mode</button>
+                <script>
+                    function myFunction() {
+                    var element = document.body;
+                    element.classList.toggle("dark");
+                    }
+                </script>
+                </div>
+
                 {% block content %}
                 {% endblock %}
             </div>
