--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-
 {% extends 'blog/base.html' %}
 
 {% block content %}
+
 
     <div>
         <h2><a href="">Wprowadzenie</a></h2>
@@ -23,6 +23,17 @@
         </p>
         <br>
     </div>
+
+
+        {% if user.is_authenticated %}
+        <div style="text-align: right;">
+            <a href="{% url 'post_new' %}">
+                <button style="background-color: gray;" type="button">New post</button>
+            </a>
+        </div>
+        {% else %}
+        <p>Tips & tricks: Jeśli dysponujesz kontem na tej stronie, zaloguj się aby mieć możliwość dodawania postów.</p>
+        {% endif %}
 
     {% for post in posts %}
         <div class="post">
