--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-    <h2><a href="">Od autora</a></h2>
-    <p>Na niniejszej stronie przeprowadzane są testy funkcjonalności różnych elementów programowania fronend
-        i backend. Jako język backend wykorzystywany jest Python. Portal budowany jest w oparciu o framework Django.
+    <h2>Od autora</h2>
+    <p>Na niniejszej stronie przeprowadzane są testy funkcjonalności różnych elementów programowania.
+        Językiem backend-owym jest Python. Do budowy portalu został wykorzystany framework Django.
         Z tego powodu jako serwer testowy wybrany został darmowy hosting na <a href="https://pythonanywhere.com">
         pythonanywhere.com</a>. Responsywność z kolei zapewnia framework Bootstrap w wersji 5.
         Języki frontend to HTML5, CSS i JavaScript. Całość wykorzystywanego kodu dostępna jest publicznie na
