--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,13 +1,10 @@
-
 body {
     background-color: silver;
 }
 
-
-
-h1 a, h2 a {
+h1, h2, h3, h4 {
+    font-family: 'Lobster', cursive;
     color: #C25100;
-    font-family: 'Lobster';
 }
 
 .page-header {
@@ -24,15 +21,6 @@ h1 a, h2 a {
 
 .content {
     margin-left: 40px;
-}
-
-h1, h2 {
-    font-family: 'Lobster', cursive;
-    color: #C25100;
-}
-
-h3, h4 {
-    font-family: 'Lobster', cursive;
 }
 
 .date {
@@ -63,5 +51,5 @@ h3, h4 {
 }
 
 .dark{
-            background-color: #222;
-            color: #e6e6e6;
+    background-color: #222222;
+    color: #e6e6e6;
