Korekty wyglądu strony

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -34,7 +34,7 @@
         {% if user.is_authenticated %}
         <div style="text-align: right;">
             <a href="{% url 'post_new' %}">
-                <button style="background-color: gray;" type="button">New post</button>
+                <button type="button">New post</button>
             </a>
         </div>
         {% else %}
