--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,6 +7,15 @@ h1, h2, h3, h4 {
     color: #C25100;
 }
 
+button {
+    background-color: gray;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .page-header {
     background-color: #C25100;
     margin-top: 0;
@@ -47,9 +56,10 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h1 a:visited {
-    color: #000000;
+    color: #C25100;
 }
 
-.dark{
+.dark {
     background-color: #222222;
     color: #e6e6e6;
+}
