--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="pl">
-
 {% load static %}
+
+<html lang="pl">
 
 <head>
     <title>clw.pythonanywhere.com</title>
@@ -10,7 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <link href="{% static 'css/blog.css' %}" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
@@ -52,9 +53,9 @@
             <div class="col-12">
                 <p></p>
                 <div style="text-align: right;">
-                <button style="background-color: gray;" onclick="myFunction()">Light/Dark mode</button>
+                <button onclick="toggleDark()">Light/Dark mode</button>
                 <script>
-                    function myFunction() {
+                    function toggleDark() {
                     var element = document.body;
                     element.classList.toggle("dark");
                     }
