--- a/blog/templates/blog/bs_grid.html
+++ b/blog/templates/blog/bs_grid.html
@@ -7,7 +7,7 @@
             <div class="col-12">
                 <h2>Wprowadzenie</h2>
                 <p>
-                    Na tej stronie tesowane są różne układy siatki Bootstrap i ich zachowanie wraz ze zmianą wielkości
+                    Na tej stronie testowane są różne układy siatki Bootstrap i ich zachowanie wraz ze zmianą wielkości
                     ekranu.
                 </p>
             </div>
