--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -3,13 +3,16 @@
 
 {% block content %}
 
+<div style="text-align: center;">
+    <br>
+
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
     {% endif %}
 
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-        <table>
+        <table class="center">
             <tr>
                 <td>{{ form.username.label_tag }}</td>
                 <td>{{ form.username }}</td>
@@ -24,5 +27,6 @@
         <input type="hidden" name="next" value="{{ next }}">
 
     </form>
+</div>
 
 {% endblock %}
